--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "axios": "^1.6.5",
+    "axios": "^1.7.2",
     "body-parser": "^1.19.2",
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.4",
-    "express": "~4.18.2",
+    "express": "^4.19.2",
     "express-jwt": "^8.4.1",
     "flatpickr": "^4.6.9",
     "http-errors": "^1.8.1",
@@ -20,7 +20,7 @@
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "pug": "^3.0.2",
+    "pug": "^3.0.3",
     "tv4": "^1.3.0"
   }
 }
